# credit-card-fraud-detection

./: .gitignore  README.md
0-data/: geo.csv  input-fraud.json  provider.csv  transaction.csv
1-data-integration/: dag-data-integration-no-metadata.json  dag-data-integration.json
2-data-integration-generated-code/: pyproject.toml  requirements.txt  setup.cfg
2-data-integration-generated-code/src/data_integration/: __main__.py
3-fraud-detection-model/: dag-fraud-detection-no-metadata.json  dag-fraud-detection.json
4-fraud-detection-model-generated-code/: pyproject.toml  requirements.txt  setup.cfg
4-fraud-detection-model-generated-code/src/fraud_detection/: __main__.py
5-exploration-model-creation-notebooks/: Fraud detection - Data Exporation.ipynb  Fraud detection - Model creation.ipynb  requirements.txt
