
[tool.poetry]
name = "src"
version = "0.1.0"
description = "Run a pipeline in Pandas"
authors = ["LittleBigCode"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line_length = 88
target_version = ['py38', 'py39']
include = '\.pyi?$'

[build-system]
requires = [
    "poetry-core>=1.1.0",
    "setuptools>=42",
    "wheel",
    "pandas",
    "s3fs",
    "scikit-learn",
    "pyarrow",
    "fastparquet"
]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.11"
