[project]
name = "fraud_detection"
version = "0.1.0"
description = "Run a pipeline in Pandas"
requires-python = ">=3.8"
authors = [
    {name = "Vincent"},
    {name = "Alanna"}
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"